# mpv-ne

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
mpv-lib/: mpv.def  mpv.exp  mpv.lib
src/: app.rs  gl_render.rs  main.rs  media_probe.rs  opensubs.rs  player.rs  resume.rs  settings.rs  thumbnail.rs  win32_input.rs  win32_modal.rs
src/ui/: app_settings.rs  browser_panel.rs  controls.rs  edge_grips.rs  icons.rs  mod.rs  playlist_panel.rs  recent_panel.rs  settings.rs  top_bar.rs  video.rs
