[package]
name = "mpv-ne"
version = "0.4.0"
edition = "2024"

[dependencies]
iced = { version = "0.14", features = ["wgpu", "image", "advanced", "tokio", "svg", "lazy"] }
libmpv-sys = "3"
raw-window-handle = "0.6"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rfd = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
directories = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1"

[build-dependencies]
winres = "0.1"
